remove reactstrap and add react-transition-group, write style by myself

--- a/style/notification.module.scss
+++ b/style/notification.module.scss
@@ -85,9 +85,10 @@ $notification-margin-bottom: 16px;
     }
   }
   &-notice-fade {
-    animation-duration: 300s;
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
+    position: relative;
+    animation-duration: 0.24s;
+    animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+    animation-fill-mode: both;
   }
   &-topRight,
   &-bottomRight {
@@ -96,35 +97,33 @@ $notification-margin-bottom: 16px;
       animation-play-state: running;
     }
     .fade-entered {
-      animation-name: NotificationFadeIn;
-      animation-play-state: running;
+      animation-play-state: paused;
     }
     .fade-exiting {
       animation-name: NotificationFadeOut;
       animation-play-state: running;
     }
     .fade-entered {
-      animation-name: NotificationFadeOut;
-      animation-play-state: running;
+      animation-duration: 0.2s;
+      animation-play-state: paused;
     }
   }
   &-topLeft,
   &-bottomLeft {
     .fade-entering {
-      animation-name: NotificationFadeIn;
+      animation-name: NotificationLeftFadeIn;
       animation-play-state: running;
     }
     .fade-entered {
-      animation-name: NotificationFadeIn;
-      animation-play-state: running;
+      animation-play-state: paused;
     }
-    .fade-entering {
+    .fade-exiting {
       animation-name: NotificationFadeOut;
       animation-play-state: running;
     }
     .fade-exited {
-      animation-name: NotificationFadeOut;
-      animation-play-state: running;
+      animation-duration: 0.2s;
+      animation-play-state: paused;
     }
   }
 
