--- a/style/index.scss
+++ b/style/index.scss
@@ -1,4 +1,4 @@
 $css-prefix: "IS-";
 $fontPrimarySize: 14px;
 $zindex-notification: 9999;
-@import "./notification.module.scss";
+@import "./notification.scss";
