--- a/style/index.scss
+++ b/style/index.scss
@@ -2,3 +2,4 @@ $css-prefix: "IS-";
 $fontPrimarySize: 14px;
 $zindex-notification: 9999;
 @import "./notification.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
